--- a/presentation/presentation.Rmd
+++ b/presentation/presentation.Rmd
@@ -260,29 +260,28 @@ participate_sex <- olympics_joined %>%
 ```{r plot-participationbysex, echo = FALSE, warning = FALSE}
 # Code hidden with echo = FALSE
 # Uses data set from previous chunk
-# Creates plot for medal proportion over time
-  participate_sex %>% 
+# Plots the time series plot for female participation
+q2_p1 <- participate_sex %>% 
   ggplot(aes(x = year, y = f_athletes_p)) +
   geom_line(aes(color = "Number of female athletes")) +
   geom_line(aes(x = year, y = f_games_p, 
-                color = "Games females compete in")) + 
+                color = "Disciplines females compete in")) + 
   facet_wrap(vars(season), scales = "free") +
   labs(title = "Female athletes participation in Olympic Games by season",
        subtitle = "From year 1900 to 2016",
        x = "Year",
-       y = "Proportion") +
- scale_color_manual(name = "Proportion of",
-                    breaks = c("Number of female athletes", 
-                             "Games females compete in"),
-                    values=c("Number of female athletes" = "orange",
-                             "Games females compete in" = "steelblue")) +
-  theme_minimal() + 
-  theme(plot.title = element_text(face = "bold", size = rel(1.2)),
-        axis.title.x = element_text(margin = margin(t = 10), size = rel(0.8)),
-        axis.title.y = element_text(margin = margin(r = 10),size = rel(0.8)),
-        strip.text = element_text(face = "bold", size = rel(0.8), hjust = 0.5),
-        legend.title = element_text(face = "bold",size = rel(0.6)),
-        legend.text = element_text(size = rel(0.6)))
+       y = "Proportion",
+       caption = "Source: data from www.sports-reference.com in 2018") +
+  scale_color_manual(name = "Proportion of",
+                     breaks = c("Number of female athletes",  "Games females compete in"),
+                     values=c("Number of female athletes" = "orange",
+                              "Disciplines females compete in" = "steelblue")) +
+  scale_color_manual(name = "Proportion of",
+                    breaks = c("Disciplines females compete in", "Number of female athletes"),
+                    values=c("Number of female athletes" = "#F4C300",
+                             "Disciplines females compete in" = "#0085C7")) +
+  bg_theme
+q2_p1 
 ```
 
 ---
