--- a/presentation/presentation.Rmd
+++ b/presentation/presentation.Rmd
@@ -285,21 +285,20 @@ q2_p1
 ```
 
 ---
-```{r recode-top15countriesfemale, echo = FALSE}
-# In this chunk I'm doing a bunch of analysis that I don't want to present 
-# in my slides. But I need the resulting data frame for a plot I want to present for top 15 countries.
-library(emojifont)
-medalist_rank <- olympics_data %>%
+```{r Q2-2-countryranking_dataframe, dev='ragg_png', include=FALSE}
+# In this chunk I'm creating a data frame that I don't want to present in my slides. But I need the resulting data frame for a plot I want to present.
+# create the sum table for a wide table of each country and its' medals.
+medalist_rank <- olympics_joined %>%
   filter(year >= 2000) %>% # focusing on  recent years
   mutate(gold = if_else(medal == "Gold", 1, 0),
          silver = if_else(medal == "Silver", 1, 0),
          bronze = if_else(medal == "Bronze", 1, 0)) %>%
-  group_by(noc, sex) %>%
+  group_by(country, sex) %>%
   summarize(n_gold = sum(gold, na.rm = TRUE), 
             n_silver = sum(silver, na.rm = TRUE), 
             n_bronze = sum(bronze, na.rm = TRUE), .groups = "drop") %>%
   mutate(n_medal = n_gold + n_silver + n_bronze) %>%
-  group_by(noc) %>%
+  group_by(country) %>%
   mutate(visit = 1:n()) %>%
   gather("sex", "n_gold", "n_silver", "n_bronze", "n_medal", 
          key = variable, value = number) %>%
@@ -309,6 +308,7 @@ medalist_rank <- olympics_data %>%
 medalist_rank[2:9] = lapply(medalist_rank[2:9], FUN = function(y){as.numeric(y)})
 medalist_rank <- medalist_rank %>%
   mutate(fp_medal = n_medal_1 / sum(n_medal_1, n_medal_2))
+# rank and use only the top 15 countries for plotting
 top_15 <- medalist_rank %>%
   arrange(desc(n_medal_1)) %>%
   head(15) %>%
@@ -319,17 +319,54 @@ top_15 <- medalist_rank %>%
 
 ```{r plot-top15countries, echo = FALSE, warning = FALSE}
 # Code hidden with echo = FALSE
-# Uses data set from previous chunk
+# Uses data frame from previous chunk
 # Creates plot for top 15 countries with respect to medals won by females
-top_15 %>%
-  ggplot(aes(x = n_medal_1, y = reorder(noc, n_medal_1))) +
-  geom_emoji(alias = 'trophy', x = top_15$n_medal_1, y = top_15$noc, size = 4, color = "#D6AF36") +
-  geom_emoji(alias = 'trophy', x = top_15$n_bronze_1, y = top_15$noc, size = 4, color = "#824A02") +
-  geom_emoji(alias = 'trophy', x = top_15$n_b_s, y = top_15$noc, size = 4, color = "#A7A7AD") +
-  geom_segment(aes(yend = noc), xend = 0, colour = "grey85", size = 0.5) +
+# create two plots with normalized and non-normalized two versions.
+q2_p2_1 <- top_15 %>%
+  ggplot(aes(x = n_medal_1, y = reorder(country, n_medal_1))) +
+  geom_segment(aes(yend = country), xend = 0, colour = "#F4C300", size = 0.5, alpha = 0.6) +
+  geom_emoji(alias = 'trophy', x = top_15$n_medal_1, y = top_15$country, 
+             size = 3.5, color = "#D6AF36") +
+  geom_emoji(alias = 'trophy', x = top_15$n_bronze_1, y = top_15$country, 
+             size = 3.5, color = "#824A02") +
+  geom_emoji(alias = 'trophy', x = top_15$n_b_s, y = top_15$country, 
+             size = 3.5, color = "#A7A7AD") +
+  scale_x_continuous(breaks = seq(0, 1000, 200)) +
+  annotate("text", label = "Types of medals", x = 600, y = "United Kingdom", size = rel(2.6)) +
+  annotate("rect", xmin = 400, xmax = 800, ymin = "Italy", ymax = "Japan", alpha = .1) +
+  annotate("point", x = 500, y = "South Korea", colour = "#D6AF36", size = 1) +
+  annotate("point", x = 500, y = "Norway", colour = "#824A02", size = 1) +
+  annotate("point", x = 500, y = "France", colour = "#A7A7AD", size = 1) +
+  annotate("text", x = 600, y = "South Korea", label = "Gold", size = rel(2.4), colour = "#D6AF36") +
+  annotate("text", x = 600, y = "Norway", label = "Silver", size = rel(2.4), colour = "#824A02") +
+  annotate("text", x = 600, y = "France", label = "Bronze", size = rel(2.4), colour = "#A7A7AD") + 
+  labs(x = "Number of medals won by females ", y = "Countries",
+       caption = " ") +
   theme_minimal() +
-  theme(panel.grid.major.y = element_blank())
-# plot_grid(sp, bp, labels = c("A", "B"), ncol = 2, nrow = 1)
+  bg_theme +
+  theme(panel.grid.major.y = element_blank(),
+        axis.text.y = element_text(size = rel(0.7))) 
+q2_p2_2 <- top_15 %>% 
+  ggplot(aes(x = fp_medal, y = reorder(country, n_medal_1))) +
+  geom_segment(aes(yend = country), xend = 0, colour = "#009F3D", size = 0.5, alpha = 0.6) +
+  geom_emoji(alias = 'trophy', 
+             x = c(top_15$fp_medal[15], top_15$fp_medal[3], top_15$fp_medal[7]), 
+             y = c("Romania", "China", "Netherlands"),
+             size = 4, color = "#009F3D") +
+  labs(x = "Proportion of medals won by females", 
+       caption = "Source: data from www.sports-reference.com in 2018") + 
+  bg_theme +
+  theme(axis.title.y = element_blank(),
+        axis.text.y = element_text(size = rel(0.7)),
+        panel.grid.major.y = element_blank()) 
+# Adding two plots together for comparison
+q2_p2 <- plot_grid(q2_p2_1, q2_p2_2, rel_widths = c(4, 3), nrow = 1,
+                   align = "hv", labels = c("Number", "Percent"), label_size = 9)
+title <- ggdraw() + 
+  draw_label("Top 15 countries in female contribution in Olympic Games (2000-2016)",
+             fontface = 'bold', x = 0, hjust = -0.2, size = 12) +
+  theme(plot.margin = margin(b = 10))
+plot_grid(title, q2_p2, ncol = 1, rel_heights = c(0.1, 1))
 ```
 
 ---
