Made some edits to the language and visuals of some plots.

--- a/Write-Up.Rmd
+++ b/Write-Up.Rmd
@@ -25,10 +25,9 @@ library(cowplot) # combine plot
 
 (1-2 paragraphs): Brief introduction to the dataset. You may repeat some of the information about the dataset provided in the introduction to the dataset on the TidyTuesday repository, paraphrasing on your own terms. Imagine that your project is a standalone document and the grader has no prior knowledge of the dataset.
 
-```{r}
-# The dataset we have picked is available on kaggle and contains historical data on all modern Olympic games starting from Athens 1896 till 2016. This data was scraped from www.sports-reference.com in 2018 and wrangled by rgriffin. Until 1992, winter and summer games used to be held in the same year. Since 1992, both summer and winter games have been taking place in a 4-year cycle (an olympiad!), resulting in winter games in 1994, summer in 1996, then again winter in 1998, and so on. 
-#This data set contains 271,116 observations and 15 variables. Each row contains data on an individual athlete participating in an individual Olympic event.To give a broad view, our data include information on 66 different sports, 1,184 different teams, 51 games, 230 different NOCs, 42 different host cities across 35 different years. 222,552 of the athletes participated in the summer games, while 48,564 participated in the winter season. The description of variables is included in the codebook in the readme file under the data folder in this repository. Accounting for missing values, 72.5 percent of the participants in our data set are males whereas the rest are females. The average age of the athletes is 25.6 years, with the oldest athlete being 97, and the youngest being 10. The average athlete’s height is 175.4cm, the maximum height is 226cm, and the minimum height is 127 cm. The average weight of an athlete is 70.7 kilograms, with the maximum being 214kg and the minimum being 25kg. This richness of data on worldwide participation and achievements in Olympic Games across the years allows us to show political and historical trends influencing countries’ performances and to explore differences in participation and performance across genders over the years and across countries. We match the NOCs with countries and merge the resultant data frame with our base data and make necessary changes to the data set by adding values where missing and rows for missing countries/continent/NOCs. We also create some new variables that are required for our analysis such as nato_wp, usa_ussr and medal_weighted.
-```
+The dataset we have picked, `olympics_data`, is available on kaggle and contains historical data on all modern Olympic games starting from Athens 1896 until 2016. The data was scraped from [www.sports-reference.com](www.sports-reference.com) in 2018 and wrangled by rgriffin. The dataset in its original form contains 271,116 observations and 15 variables. Each row contains data on an individual athlete participating in an individual Olympic event.To give a broad overview, our data includes information on 66 different sports, 1,184 different teams, 51 games, 230 different National Olympic Committees (NOCs), 42 different host cities across 35 different years. 222,552 of the athletes participated in the summer games, while 48,564 participated in the winter season. The description of variables is included in the codebook in the readme file under the data folder in this repository. Unfortunately, the dataset does not contain information about the countries represented in the Olympics, though it does provide the three-letter code of each NOC. Using the `countrycode` package and the `codelist_panel` contained in it, we add valuable information about the participating countries to the Olympics data and use this merged dataset, `olympics_joined`, to perform our analyses below.
+
+Accounting for missing values, 72.5 percent of the participants in our data set are male and the rest are female. The average age of the competitors is 25.6 years, with the oldest competitor being 97, and the youngest being 10. The average athlete’s height is 175.4cm, the maximum height is 226cm, and the minimum height is 127 cm. The average weight of an athlete is 70.7 kilograms, with the maximum being 214kg and the minimum being 25kg. This richness of data on worldwide participation and achievements in Olympic Games across the years allows us to show political and historical trends influencing countries’ performances and to explore differences in participation and performance across genders over the years and across countries. We match the NOCs with countries and merge the resulting data frame with our base data. In the code chunk immediately below this, we read in the datasets and manipulate/add relevant variables.
 
 
 ```{r load-data, message=FALSE, warning=FALSE}
@@ -41,7 +40,7 @@ countrycode <- codelist_panel %>%
   select(noc, continent, country) %>%
   distinct()
 
-#amend datasets to include new variables and fill crucial missing values
+#amend countrycode dataset to  fill crucial missing values
 countrycode$noc[70] <- "GDR" #east germany
 countrycode$continent[70] <- "Europe"
 countrycode$noc[51] <- "TCH" #czechoslovakia
@@ -85,7 +84,7 @@ bg_theme <- theme_minimal() +
         legend.text = element_text(size = rel(0.6)))
 ```
 
-## Question 1
+## Question 1 -- The Olympics and the Cold War
 
 ### Introduction
 
@@ -94,15 +93,15 @@ The Olympics served as an outlet for different (city-)states to compete with one
 1. How has the dominance of the Soviet Union (/Russia as its main successor) and the United States changed throughout the cold war and after?
 2. How do NATO and Warsaw Pact member-states compare in terms of medals won at the Olympics?
 
-In order to answer these questions, we examine the `country` variable (coded based on the `noc` variable) and, relatedly, the `nato_wp` variable which indicates whether a country was a member of NATO, the Warsaw Pact, or non-aligned (also coded based on the `noc` variable). To measure their success in the Olympics, we calculate the proportion of medals won by the USSR/Russia or the USA and all other countries (stored in the `medal_prop` variable), and examine the total amount of medals won by NATO/Warsaw Pact members. Finally, we also assess the `season` variable in order to differentiate between Summer and Winter Olympics.
+In order to answer these questions, we examine the `country` variable (coded based on the `noc` variable) and, relatedly, the `nato_wp` variable which indicates whether a country was a member of NATO, the Warsaw Pact, or non-aligned (also coded based on the `noc` variable). To measure their success in the Olympics, we calculate the proportion of medals won by the USSR/Russia or the USA and all other countries (stored in the `medal_prop` variable), and we also examine the total amount of medals won by NATO/Warsaw Pact members. Finally, we also assess the `season` variable in order to differentiate between Summer and Winter Olympics.
 
 Please note that we categorize countries into the NATO or Warsaw Pact categories based on their allegiances during the Cold War. Countries like Poland or the Baltic countries which were part of the Warsaw Pact during the Cold War and joined NATO after it ended are still coded as Warsaw Pact members. Moreover, we decided not to include Albania as a Warsaw Pact member due to the Soviet-Albanian split of 1968.
 
 ### Approach
 
-We believe that time-series plots are best-suited to examine changes and trends over periods of time; thus we construct a time-series plot and line graph to examine how the proportion of medals won by the USA and USSR/Russia have developed over time. On the x-axis, we plot the `year` variable, and on the y-axis, we plot the `medal_prop` variable indicating the proportion of medals won by the United States and the USSR/Russia. The color aesthetic helps us differentiate between medals won by the United States, the USSR/Russia, and other countries. We facet the plot by the `season` variable to indicate whether medals were won in Summer or Winter Olympics, and add vertical lines to this plot indicating the end of World War II (1945), as well as the end of the cold war as marked by the dissolution of the USSR (1991).
+We believe that time-series plots are best-suited to examine changes and trends over periods of time; thus we construct a time-series plot and line graph to examine how the proportion of medals won by the USA and USSR/Russia have developed over time. On the x-axis, we plot the `year` variable, and on the y-axis, we plot the `medal_prop` variable indicating the proportion of medals won by the United States and the USSR/Russia. The color aesthetic helps us differentiate between medals won by the United States, the USSR/Russia, and other countries. We facet the plot by the `season` variable to indicate whether medals were won in Summer or Winter Olympics, and add vertical lines to this plot indicating the end of World War II (1945), as well as the end of the Cold War as marked by the dissolution of the USSR (1991).
 
-As the second question is more about the overall performance of members of the Warsaw PAct and NATO, we choose to represent the type and amount of medals won by each relevant country in a stacked bar chart. The bars itself indicate the amount of medals each country won, and the bars are ordered based on the total amount of medals won in descending order. Further, we use colors to indicate whether a country was aligned with NATO or the Warsaw Pact, and different-colored emojis indicate the amount of gold, silver, and bronze medals each country won. We believe that this is the best way of assessing the question visually, as it represents all relevant information in a simple, straightforward manner.
+As the second question is more about the overall performance of members of the Warsaw Pact and NATO, we choose to represent the type and amount of medals won by each relevant country in a bar chart. The bars itself indicate the amount of medals each country won, and the bars are ordered based on the total amount of medals won in descending order. We use colors to indicate whether a country was aligned with NATO (blue) or the Warsaw Pact (red). We believe that this is the best way of assessing the question visually, as it represents all relevant information in a simple, straightforward manner. Please note that between 1956 and 1964, East and West Germany sent a joint team to represent both countries in the Olympics, thus complicating the visualization of medals won by NATO and Warsaw Pact countries below. 
 
 ### Analysis
 
@@ -159,7 +158,7 @@ q2_df <- olympics_joined %>%
 q2_df %>%
   ggplot(mapping = aes(y = reorder(country, medals_won), x = medals_won, fill = nato_wp)) +
   geom_col() +
-  scale_fill_manual(values = c("blue", "red", "violet")) +
+  scale_fill_manual(values = c("blue", "red", "magenta")) +
   bg_theme +
   labs(title = "Medals Won by NATO and Warsaw Pact Countries",
        subtitle = "In Olympics during the Cold War, 1945-1991",
@@ -170,23 +169,23 @@ q2_df %>%
 
 ### Discussion
 
-The first plot shows that throughout most of the Cold War (visually represented as the space between the dashed lines), the Soviet Union won a higher proportion of medals than the United States did. The difference is particularly stark for the winter Olympics, where the Soviet Union maintained a steady lead over the United States ever since the inception of its Winter Olympics program in the 1950s. While the American performance has remained somewhat stable in the Summer Olympics and even improved in the Winter Olympics in the years following the dissolution of the USSR, the same cannot be said for Russia, the main successor state to the Soviet Union. The percentage of medals won by the USSR/Russia decreased immensely right before the dissolution of the USSR and afterwards, which is likely related to the economic and political upheaval the country went through in the late 1980s and early 1990s. Overall, the performance of both the United States and the Soviet Union during the Cold War was remarkable, which conforms with our expectations that both countries were eager to one-up one another in an effort to prove superiority.
+The first plot shows that throughout most of the Cold War (visually represented as the space between the dashed lines), the Soviet Union won a higher proportion of medals than the United States did. The difference is particularly stark for the winter Olympics, where the Soviet Union maintained a steady lead over the United States ever since the inception of its Winter Olympics program in the 1950s. While the American performance has remained somewhat stable in the Summer Olympics and even improved in the Winter Olympics in the years following the dissolution of the USSR, the same cannot be said for Russia, the main successor state to the Soviet Union. The percentage of medals won by the USSR/Russia decreased immensely right before the dissolution of the USSR and afterwards, which is likely related to the economic and political upheaval the country went through in the late 1980s and early 1990s. Overall, the performance of both the United States and the Soviet Union during the Cold War was remarkable, which confirms our expectations that both countries were eager to one-up one another in an effort to prove their respective system's superiority.
 
-The second plot provides more context to the previous finding that the United States and the Soviet Union dominated the medal counts in the Olympic Games during the Cold War. East Germany and Hungary both earned a remarkable amount of medals, especially considering that only those East German medals were counted that were not won by the United Team of Germany that competed in the Olympics between 1956 and 1964. The only definitive conclusion we want to draw from this graph is that neither NATO nor the Warsaw Pact, that is to say, neither the capitalist nor the communist system produced a clear "winner" in terms of outperforming the other at the Olympics. While the Soviet Union won more medals than the United States, Italy and France won more medals than, for example, Romania and Poland. We speculate that the Olympics mattered more in some national contexts than others: for example, the high number of Olympic medals won by East and West Germany might reflect the direct competition the two were in and the high salience of the systemic differences between the two countries.
+The second plot provides more context to the previous finding that the United States and the Soviet Union dominated the medal counts in the Olympic Games during the Cold War. East Germany and Hungary both earned a remarkable amount of medals, especially considering that only those East German medals were counted that were not won by the United Team of Germany that competed in the Olympics between 1956 and 1964. The only definitive conclusion we want to draw from this graph is that neither NATO nor the Warsaw Pact, that is to say, neither the capitalist nor the communist systems, produced a clear "winner" in terms of outperforming the other at the Olympics. While the Soviet Union won more medals than the United States, Italy and France won more medals than, for example, Romania and Poland. We speculate that the Olympics mattered more in some national contexts than others: for example, the high number of Olympic medals won by East and West Germany might reflect the direct competition the two were in and the high salience of the systemic differences between the two countries.
 
-## Question 2
+## Question 2 -- Women in the Olympics
 
 ### Introduction
 
-Women started to participate in the Olympic Games from the year of 1900 in Paris. Among a total of around 1,000 athletes, only 22 women competed in five sports, according to International Olympic Committee. Since then, the number of female participants and that of sports females can compete has increased and is expected to keep increasing in the near future. Given persisting gender inequalities in many countries, we are interested in analyzing gender representation in the sports’ world. From a historical perspective, first, we are curious about how female participation has changed in Olympic Games. Second, we also look into the female athletes performance on the country level and plan to spotlight countries with top female contribution. Our following approach, analysis, and visualization will further demonstrate these two issues of interest.
+Women started to participate in the Olympic Games beginning in the year 1900 in Paris. Among a total of around 1,000 athletes, only 22 women competed in five disciplines, according to International Olympic Committee. Since then, the number of female participants and that of sports females can compete has increased and is expected to keep increasing in the near future. Given persisting gender inequalities in many countries, we are interested in analyzing gender representation in the sports world. From a historical perspective, first, we are curious to see how female participation has changed in Olympic Games. Second, we also look into the female athletes performance on the country level and plan to spotlight countries with top female contribution. Our following approach, analysis, and visualization will further demonstrate these two issues of interest.
 
-To illustrate gender difference in Olympic, our dataset provides rich information on individual athletes with their `name`, `sex`, `noc`, `sports`, `year`, `medal`, etc. It allows us to create new variables for summarized tables and time-series analysis. For example, it is feasible to compute the proportion of female athletes and the count of sports for each Game and season over the years. Grouping by the `noc` code, the dataset aids us in generating summarized tables for ranking and comparing females medalists across countries. More rigorously, since countries may differ greatly in the number of female participants, we can normalize the measure of female medalists by calculating the proportion of medals that comes from female athletes among all medals for a given country. 
+To illustrate gender difference in Olympic, our dataset provides rich information on individual athletes with their `name`, `sex`, `noc`, `sports`, `year`, `medal`, etc. It allows us to create new variables for summarized tables and time-series analysis. For example, it is feasible to compute the proportion of female athletes and the count of sports for each Game and season over the years. Grouping by the `noc` code, the dataset aids us in generating summarized tables for ranking and comparing females medalists across countries. More rigorously, since countries may differ greatly in the number of female participants, we normalize the measure of female medalists by calculating the proportion of medals that comes from female athletes among all medals for a given country. 
 
 ### Approach
 
-To answer the first question, “How does female participation in Olympics Games change? ” we construct an overall time-series line plot. This plot comes from a summarized table with the average proportion of female athletes and the proportion of games female athletes participate in over the years. The two measures are positioned on the y-axis and illustrated in different colors - and they are manually set to be in Olympic-logo colors! The year for each event is on the x-axis. The season information is demonstrated through two different facets. We choose the line plot format first because it can best visually represent the trend information. Second, it has an advantage in terms of data-ink-ratio for visualization, therefore it helps simplify the complexities in our aggregated data.
+To answer the first question, “How has female participation in Olympics changed throughout history?” we construct an overall time-series line plot. This plot comes from a summarized table with the average proportion of female athletes and the proportion of games female athletes participate in over the years. The two measures are positioned on the y-axis and illustrated in different colors - and they are manually set to be in Olympic-logo colors! The year for each event is on the x-axis. The season information is demonstrated through two different facets. We choose the line plot format first because it can best visually represent the trend information. Second, it has an advantage in terms of data-ink-ratio for visualization, therefore it helps simplify the complexities in our aggregated data.
 
-For the second part, “Which countries have the highest numbers of female medalists or enjoy the most contributions from female athletes over the recent years?” we construct lollipop plots and rank the top 15 countries with the highest measurements. We summarized a table calculating the number of medals won by females and males for each country, and also divided by the types of medals. We have two versions to present the female contributions - one with the number of medals won by women (non-normalized), and the other one with the proportion of medals won by women for that country (normalized). We use two plots side by side to demonstrate these two versions. The y-axis shows the names of countries with the top rankings. The types of medals are shown in different colors and emoji to be creative. Visually it's like a stacked lollipop plot. We choose this format to approach this question because it can clearly show the winning medal distribution and the countries rankings. It can clearly give viewers a sense of quantity through visualization.
+For the second part, “Which countries have the highest numbers of female medalists or enjoy the most contributions from female athletes over the recent years?” we construct lollipop plots and rank the top 15 countries with the highest numbers of female medalists. We summarized a table calculating the number of medals won by female and male participants for each country, and also divided by the types of medals. We have two versions to present the female contributions - one with the number of medals won by women (non-normalized), and the other one with the proportion of medals won by women for that country (normalized). We use two plots side by side to demonstrate these two versions. The y-axis shows the names of countries with the top rankings. The types of medals are shown in different colors and emoji to be creative. Visually it's comparable to a stacked lollipop plot. We choose this format to approach this question because it can clearly show the winning medal distribution and the countries rankings. It can clearly give viewers a sense of quantity through visualization.
 
 ### Analysis
 
@@ -215,8 +214,8 @@ q2_p1 <- participate_sex %>%
   geom_line(aes(x = year, y = f_games_p, 
                 color = "Disciplines females compete in")) + 
   facet_wrap(vars(season), scales = "free") +
-  labs(title = "Female athletes participation in Olympic Games by season",
-       subtitle = "From year 1900 to 2016",
+  labs(title = "Female Athletes Participation in the Olympic Games by Season",
+       subtitle = "From 1900 to 2016",
        x = "Year",
        y = "Proportion",
        caption = "Source: data from www.sports-reference.com in 2018") +
@@ -278,7 +277,7 @@ q2_p2_1 <- top_15 %>%
   annotate("text", x = 600, y = "South Korea", label = "Gold", size = rel(2.4), colour = "#D6AF36") +
   annotate("text", x = 600, y = "Norway", label = "Silver", size = rel(2.4), colour = "#824A02") +
   annotate("text", x = 600, y = "France", label = "Bronze", size = rel(2.4), colour = "#A7A7AD") + 
-  labs(x = "Number of medals won by females ", y = "Countries",
+  labs(x = "Number of Medals Won by Women", y = "Countries",
        caption = " ") +
   theme_minimal() +
   bg_theme +
@@ -291,7 +290,7 @@ q2_p2_2 <- top_15 %>%
              x = c(top_15$fp_medal[15], top_15$fp_medal[3], top_15$fp_medal[7]), 
              y = c("Romania", "China", "Netherlands"),
              size = 4, color = "#009F3D") +
-  labs(x = "Proportion of medals won by females", 
+  labs(x = "Proportion of Medals Won by Women", 
        caption = "Source: data from www.sports-reference.com in 2018") + 
   bg_theme +
   theme(axis.title.y = element_blank(),
@@ -299,9 +298,9 @@ q2_p2_2 <- top_15 %>%
         panel.grid.major.y = element_blank()) 
 # Adding two plots together for comparison
 q2_p2 <- plot_grid(q2_p2_1, q2_p2_2, rel_widths = c(4, 3), nrow = 1,
-                   align = "hv", labels = c("Number", "Percent"), label_size = 9)
+                   align = "hv", labels = c("Number", "Proportion"), label_size = 9)
 title <- ggdraw() + 
-  draw_label("Top 15 countries in female contribution in Olympic Games (2000-2016)",
+  draw_label("Countries with the Highest Number of Female Olympic Medalists, 2000-2016",
              fontface = 'bold', x = 0, hjust = -0.2, size = 12) +
   theme(plot.margin = margin(b = 10))
 plot_grid(title, q2_p2, ncol = 1, rel_heights = c(0.1, 1))
@@ -309,6 +308,6 @@ plot_grid(title, q2_p2, ncol = 1, rel_heights = c(0.1, 1))
 
 ### Discussion
 
-The first plot gives a clear upward trend for both the proportion of female athletes and that of games they can compete in. It has gone from nearly 0 to about 0.5 - thus a half - in recent years. This answers our first part of the question that females are having increasing representation in Olympic Games. This happens similarly and concurrently with summer and winter sports seasons.
+The first plot indicates a clear upward trend for both the proportion of female athletes competing and the proportion of games they compete in. It has gone from nearly 0 to about 0.5 - thus a half - in recent years. This answers our first part of the question that females are having increasing representation in Olympic Games. The trends are comparable and rather similar in both summer and winter Olympics. We believe that this time-series plot proves that while women were significantly discriminated against and excluded in many sports, there has been a shift towards more equality in recent years. This graph does not showcase the reception of female vs male artists to the audience, however, and might mask other underlying inequalities. For example, many Olympics fans might be able to name Usain Bolt as the fastest man in the world, or Michael Phelps as one of the most successful athletes in terms of medals won; however, their female counterparts are less known to the broader public.
 
-The second plot zooms in on the 15 countries with the highest numbers of medals won by females from the year of 2000 to 2016. The descending order allows us to observe that U.S., Russia, and China are positioned in the top 3 in numbers, while Romania, China, and Netherlands have top positions after normalization - higher than 60% of medals are won by females. Although not among the top 3, the U.S. also has over 50% medals contributed by female athletes. The plot answers our second part of the question by illustrating the size and degree of female contributions for top-ranked countries.
+The second plot zooms in on the 15 countries with the highest numbers of medals won by females from the years 2000 to 2016. The descending order allows us to observe that U.S., Russia, and China are positioned in the top 3 in numbers, while Romania, China, and Netherlands have top positions after normalization -- in these countries, more than 60% of medals are won by females. Although not among the top 3, the U.S. also has over 50% medals contributed by female athletes. The plot answers our second part of the question, namely which countries sport the highest numbers of female Olympic medalists, by illustrating the size and degree of female contributions for top-ranked countries.
