--- a/Write-Up.Rmd
+++ b/Write-Up.Rmd
@@ -292,14 +292,16 @@ q2_p2_2 <- top_15 %>%
        caption = "Source: data from www.sports-reference.com in 2018") + 
   bg_theme +
   theme(axis.title.y = element_blank(),
-        axis.text.y = element_text(size = rel(0.7)),
+        axis.text.y = element_blank(),
         panel.grid.major.y = element_blank()) 
 # Adding two plots together for comparison
-q2_p2 <- plot_grid(q2_p2_1, q2_p2_2, rel_widths = c(4, 3), nrow = 1,
-                   align = "hv", labels = c("Number", "Proportion"), label_size = 9)
+
+q2_p2 <- plot_grid(q2_p2_1, NULL, q2_p2_2, rel_widths = c(3.2, -0.5, 3), nrow = 1,
+                   align = "hv", labels = c(str_pad("Number", 22, "left", " "), "", 
+                                            str_pad("Percent", 23, "left", " ")), label_size = 9)
 title <- ggdraw() + 
   draw_label("Countries with the Highest Number of Female Olympic Medalists, 2000-2016",
-             fontface = 'bold', x = 0, hjust = -0.2, size = 12) +
+             fontface = 'bold', x = 0, hjust = -0.1, size = 12) +
   theme(plot.margin = margin(b = 10))
 plot_grid(title, q2_p2, ncol = 1, rel_heights = c(0.1, 1))
 ```
